# Cg-Anw

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Doku/content/: Auswertung.tex  Titel.tex
doc/: Diagramm1.dia  cg.docx  ~$cg.docx
doc/Latex/: .gitignore  Projektbericht.tex
doc/Latex/content/: Auswertung.tex  Titel.tex
doc/Latex/macros/: newcommands.tex
doc/Latex/preambel/: fonts.tex  packages.tex
include/: CatmullClark1.h  GLSLProgram.h  HalfEdge.h  MeshWrapper.h  MyMesh.h  NormalCalculation.h  OBJDimensions.h  OBJLoader.h  OGLWEdgesWrapper.h  OGLWVerticesWrapper.h  OGLWidget.h  OGLWidgetUI.h  Object.h  Renderer.h  Shader.h  Shading.h  SimpleObjParser.h  SimpleObject.h  TriangleMesh.h  VBOHandler.h  VectorsWrapper.h  VerticesWrapper.h  Window.h  camera.h  glextload.h  glwidget.h  logo.h  mainwindow.h  myglwidget.h  scene_constants.h  utils.h  window.h
libs/OpenMesh/include/OpenMesh/Core/System/: config.h
libs/OpenMesh/include/OpenMesh/Tools/Utils/: Timer.cc
libs/freeglut-3.0.0-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  freeglut.def
libs/freeglut-3.0.0-mingw/lib/: libfreeglut.exp  libfreeglut.lib
libs/glew-2.1.0/: README.md
libs/glm-0.9.7.2/: readme.md
libs/googletest-release-1.8.0-mingw/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump
libs/googletest-release-1.8.0-mingw/include/gtest/: gtest-param-test.h.pump
libs/googletest-release-1.8.0-mingw/include/gtest/internal/: gtest-tuple.h.pump  gtest-type-util.h.pump
res/: QtGUI.qrc
shader/: frag_shader.glsl  geom_shader.glsl  phongShader.frag  phongShader.vert  simple.frag  simple.vert  simpleShader.frag  simpleShader.vert  vert_shader.glsl
src/: CatmullClark1.cpp  GLSLProgram.cpp  HalfEdge.cpp  MeshWrapper.cpp  NormalCalculation.cpp  OBJDimensions.cpp  OBJLoader.cpp  OGLWEdgesWrapper.cpp  OGLWVerticesWrapper.cpp  OGLWidget.cpp  OGLWidgetUI.cpp  QtGUI.cpp  Renderer.cpp  Shader.cpp  SimpleObjParser.cpp  SimpleObject.cpp  TriangleMesh.cpp  VBOHandler.cpp  VectorsWrapper.cpp  Vertex.cpp  Vertex.h  VerticesWrapper.cpp  Window.cpp  camera.cpp  glwidget.cpp  logo.cpp  main.cpp  mainwindow.cpp  myglwidget.cpp  utils.cpp  window.cpp  window.ui
test/: HE_Wrapper_TEST.cpp  MESH_TEST.cpp  SimpleObjParser_TEST.cpp
ui/: QtGUI.h  QtGUI.ui  window.ui
